# OmasWebshop

./: .env  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  sonar-project.properties
.github/workflows/: code_check.yml  codeql.yml  content_check.yml  deploy.yml  meineTestPipeline.yml  pipeline.yml  publish_docker.yml  sonarqube.yml
UserAndAuthBackend/: .env  Cargo.toml  Dockerfile
UserAndAuthBackend/migrations/2023-05-13-145938_users/: down.sql  up.sql
UserAndAuthBackend/src/: .env  config.rs  controller.rs  db.rs  email.rs  handlebars_template_creator.rs  main.rs  models.rs  repository.rs  schema.rs  service.rs  util.rs
UserAndAuthBackend/src/models/: address_model.rs  jwt_model.rs  login_model.rs  response_model.rs  user_model.rs
UserAndAuthBackend/src/services/: login_jwt_service.rs  registration_service.rs
UserAndAuthBackend/src/templates/: email_verification.hbs
UserAndAuthBackend/src/templates/layouts/: base.hbs
UserAndAuthBackend/src/utils/: email_validation_util.rs  hash_password_util.rs  jwt_util.rs
UserAndAuthBackend/templates/: email_verification.hbs
UserAndAuthBackend/templates/partial/: email_verification_style.hbs
WebshopBackend/: Dockerfile  pom.xml
WebshopFrontend/: .dockerignore  Dockerfile  README.md  pubspec.yaml  sonar-project.properties
WebshopFrontend/android/app/: build.gradle
WebshopFrontend/lib/: boxes.dart  constats.dart  main.dart
WebshopFrontend/lib/globalwidget/: centered_view.dart  top_bar.dart  (+6 more)
WebshopFrontend/test/: widget_test.dart
WebshopFrontend/web/: index.html  manifest.json
(+70 files in other folders)
