[package]
name = "UserAndAuthBackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
diesel = "2.0.4"
jsonwebtoken = "8.3.0"
uuid = "1.3.2"
serde = {version = "1.0.130", features = ["derive"]}