[package]
name = "UserAndAuthBackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
diesel = {version = "2.0.4", features = ["postgres"]}
jsonwebtoken = "8.3.0"
uuid = "1.3.2"
serde = {version = "1.0.130", features = ["derive"]}
rust-crypto = "0.2.36"
dotenvy = "0.15.7"